core/tests/errors/throw.rain
let main = fn() {
	internal._throw("test")
}
